create buttons and functionality to export orders/customers/products to json and xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Common
+spring.main.banner-mode="off"
+
 # JPA / Hibernate
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
