use a single method in rest controllers to return both json and xml, display a proper index of a table record based on the page number being viewed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Logging
 # logging.level.org.hibernate.type=TRACE
+
+# Misc
+spring.mvc.contentnegotiation.favor-parameter=true
